little css and error svg on a login page

--- a/src/App.css
+++ b/src/App.css
@@ -48,3 +48,20 @@
   font-size: 50px;
   color: black;
 }
+.arrow-up {
+  width: 0;
+  height: 0;
+  border-left: 20px solid transparent;
+  border-right: 20px solid transparent;
+
+  border-bottom: 20px solid #f00;
+}
+
+.arrow-down {
+  width: 0;
+  height: 0;
+  border-left: 20px solid transparent;
+  border-right: 20px solid transparent;
+
+  border-top: 20px solid #f00;
+}
