--- a/src/style/tailwind.css
+++ b/src/style/tailwind.css
@@ -1,7 +1,73 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-.bg {
+.bgLogin {
   background-color: #ffffff;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%23fe2a00' fill-opacity='0.30' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
+  background: url('/public/images/waves/redLogin.png');
+  background-attachment: fixed;
+}
+.bgDashboard {
+  position: relative;
+  z-index: 1;
+}
+.bgDashboard:before {
+  background: url('/public/images/waves/redDashboard.png');
+  background-attachment: fixed;
+  content: ' ';
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  opacity: 0.7;
+  z-index: -1;
+}
+.bgRouterNested {
+  position: relative;
+  z-index: 1;
+}
+.bgRouterNested:before {
+  background: url('/public/images/waves/redRouterNested.png');
+  background-attachment: fixed;
+  content: ' ';
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  opacity: 0.7;
+  z-index: -1;
+}
+.bgMainNested {
+  position: relative;
+  z-index: 1;
+}
+.bgMainNested:before {
+  background: url('/public/images/waves/redMainNested.png');
+  background-attachment: fixed;
+  content: ' ';
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  opacity: 0.7;
+  z-index: -1;
+}
+
+.bgSubNested {
+  position: relative;
+  z-index: 1;
+}
+.bgSubNested:before {
+  background: url('/public/images/waves/redSubNested.png');
+  background-attachment: fixed;
+  content: ' ';
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  opacity: 0.6;
+  z-index: -1;
 }
