--- a/src/style/tailwind.css
+++ b/src/style/tailwind.css
@@ -76,9 +76,11 @@
   width: 600px;
 }
 
+
+
 @media only screen and (max-width: 1450px) {
   .heightPages {
-    height: 50%;
+    height: 80vh;
   }
 }
 @media only screen and (max-width: 450px) {
