--- a/src/style/tailwind.css
+++ b/src/style/tailwind.css
@@ -78,9 +78,9 @@
 
 
 
-@media only screen and (max-width: 1450px) {
+@media only screen and (max-width: 1536px) {
   .heightPages {
-    height: 80vh;
+    height: 100%;
   }
 }
 @media only screen and (max-width: 450px) {
