--- a/src/style/tailwind.css
+++ b/src/style/tailwind.css
@@ -62,6 +62,7 @@
 .bgSubNested:before {
   background: url('/public/images/waves/redSubNested.png');
   background-attachment: fixed;
+  background-repeat: no-repeat;
   content: ' ';
   top: 0;
   left: 0;
@@ -72,6 +73,23 @@
   z-index: -1;
 }
 
+.bgAbout {
+  position: relative;
+  z-index: 1;
+}
+.bgAbout:before {
+  background: url('/public/images/waves/redAbout.png');
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  content: ' ';
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  opacity: 0.6;
+  z-index: -1;
+}
 .dashboardPage {
   width: 600px;
 }
@@ -87,6 +105,7 @@
   }
   .greetPages {
     width: 325px;
+    background-repeat: no-repeat;
   }
   .dashboardPage {
     text-size: 20px;
@@ -103,6 +122,7 @@
   }
   .greetPages {
     width: 275px;
+    background-repeat: no-repeat;
   }
   .dashboardPage {
     text-size: 18px;
@@ -119,6 +139,7 @@
   }
   .greetPages {
     width: 265px;
+    background-repeat: no-repeat;
   }
   .dashboardPage {
     text-size: 16px;
