--- a/src/style/tailwind.css
+++ b/src/style/tailwind.css
@@ -155,3 +155,16 @@
 .borderHover:hover #hrr {
   border: 1px solid black;
 }
+
+.spinnerLoader {
+  animation: spin 1s linear infinite;
+
+  @keyframes spin {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
+  }
+}
