--- a/src/style/tailwind.css
+++ b/src/style/tailwind.css
@@ -185,6 +185,7 @@
 
 .dropdown:hover .dropdown-content {
   display: block;
+  position: relative;
   border-radius: 15px;
 }
 
@@ -201,7 +202,6 @@
   background-position: right center;
   color: black;
   text-shadow: -1px 0 black, 0 0px black, 1px 0 black, 0 -1px black;
-  outline: 5px solid tomato;
 }
 
 .button {
