--- a/src/style/tailwind.css
+++ b/src/style/tailwind.css
@@ -94,11 +94,30 @@
   width: 600px;
 }
 
+@media only screen and (max-width: 1936px) {
+  .heightPages {
+    height: 100vh;
+  }
+}
+
 @media only screen and (max-width: 1536px) {
   .heightPages {
     height: 100%;
   }
 }
+
+@media only screen and (max-width: 1336px) {
+  .heightPages {
+    height: 100vh;
+  }
+}
+
+@media only screen and (max-width: 1024px) {
+  .heightPages {
+    height: 76%;
+  }
+}
+
 @media only screen and (max-width: 450px) {
   .heightPages {
     height: 66%;
@@ -116,6 +135,7 @@
     flex-direction: column;
   }
 }
+
 @media only screen and (max-width: 380px) {
   .heightPages {
     width: 275px;
